tests/neg-custom-args/captures/usingLogFile-alt.check
-- Error: tests/neg-custom-args/captures/usingLogFile-alt.scala:18:2 ---------------------------------------------------
18 |  usingFile(  // error
   |  ^^^^^^^^^
   |  Sealed type variable T cannot  be instantiated to box () => Unit since
   |  that type captures the root capability `cap`.
   |  This is often caused by a local capability in the body of method usingFile
   |  leaking as part of its result.
